src/parsers/snapshots/meshb__parsers__mail_parser__tests__useless_line_should_work.snap
---
source: src/mail_parser.rs
expression: "useless_line(\" \\t%ble\\n\")"
---
Ok(
    (
        "",
        (),
    ),
)
